kubernetes/ingress/voting-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting-app

  labels:
    app.kubernetes.io/name: voting-app-ingress
    app.kubernetes.io/part-of: voting-app

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - vote.stef.ironlabs.online
        - result.stef.ironlabs.online
      secretName: voting-app-tls

  rules:
    - host: vote.stef.ironlabs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80

    - host: result.stef.ironlabs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
